<resources>
    <string name="app_name">Lemon Squeeze</string>
    <string name="search_juices_and_shakes">Search Juices and Shakes</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="all">All</string>
    <string name="cold_shakes">Cold Shakes</string>
    <string name="juice">Juice</string>
    <string name="popular">Popular</string>
    <string name="new_arrival">New Arrival</string>
    <string name="try_this_out">Try this out!</string>
    <string name="default_desc">Describe your juice in few words.</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="ingredients">Ingredients</string>
    <string name="let_s_try_this_out">Let\'s try this out</string>
    <string name="lemon_squeeze">lemon squeeze</string>
    <string name="liked">Liked</string>
    <string name="saved">Saved</string>
    <string name="rather_you_can_try_something_new_and_share_with_others">Rather you can try something new and share with others!</string>
    <string name="delete">Delete</string>
    <string name="ingredient">Ingredient</string>
    <string name="add_recipe_step">Add Recipe Step</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="start_writing_here">Start writing here</string>
    <string name="cancel">Cancel</string>
    <string name="exit">EXIT</string>
    <string name="are_you_sure_you_want_to_exit_this_data_will_not_be_saved">Are you sure you want to exit? This data will not be saved.</string>
    <string name="alert">Alert</string>
    <string name="back_alert">Back alert</string>
</resources>
