<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back_alert"
            android:src="@drawable/ic_alert"/>

        <TextView
            android:id="@+id/tv_alert_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            android:textSize="21dp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_green"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_alert_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_exit_this_data_will_not_be_saved"
        android:textSize="17dp"
        android:textColor="@color/dark_green"
        android:layout_marginTop="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_exit_post_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="17dp"
            android:padding="7dp"
            android:textColor="#ce1212"
            android:textStyle="bold"
            android:layout_margin="4dp"/>

        <TextView
            android:id="@+id/tv_cancel_exit_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="17dp"
            android:padding="7dp"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"/>

    </LinearLayout>


</LinearLayout>