<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                android:background="@color/light_green"
                app:cardBackgroundColor="@color/light_green"
                tools:layout_editor_absoluteX="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:fadeScrollbars="false"
                        android:gravity="start|center_vertical"
                        android:hint="@string/search_juices_and_shakes"
                        android:textCursorDrawable="@drawable/custom_cursor"
                        android:textColorHint="@color/dark_green"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:textColor="@color/dark_green"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp" />

                    <ImageView
                        android:id="@+id/iv_search"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="12dp"
                        android:contentDescription="@string/search"
                        android:src="@drawable/ic_search_black_24dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/iv_drawer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="8dp"
                android:contentDescription="@string/menu"
                android:layout_gravity="center"
                android:src="@drawable/menu"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_wishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Good Morning :D"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginTop="22dp"
            android:textColor="@color/dark_green"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:background="@color/dark_green"
                app:cardBackgroundColor="@color/dark_green"
                tools:layout_editor_absoluteX="30dp">

                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textSize="17dp"
                    android:textColor="@color/light_green"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="7dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/light_green"
                app:cardBackgroundColor="@color/light_green"
                tools:layout_editor_absoluteX="30dp">

                <TextView
                    android:id="@+id/tv_cold_shakes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cold_shakes"
                    android:textSize="17dp"
                    android:textColor="@color/dark_green"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="7dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:layout_marginStart="15dp"
                android:background="@color/light_green"
                app:cardBackgroundColor="@color/light_green"
                tools:layout_editor_absoluteX="30dp">

                <TextView
                    android:id="@+id/tv_juices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/juice"
                    android:textSize="17dp"
                    android:textColor="@color/dark_green"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="7dp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/popular"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:textSize="20dp"/>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif_loading"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/ic_loading"
            android:scaleType="centerCrop"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/ll_popular_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"/>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_try_new"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/light_green"
            app:cardBackgroundColor="@color/light_green"
            tools:layout_editor_absoluteX="30dp">

            <ImageView
                android:id="@+id/iv_try_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img3"
                android:contentDescription="@string/new_arrival"
                android:scaleType="centerCrop"
                android:background="@drawable/image_container"
                android:outlineProvider="background"/>

            <TextView
                android:id="@+id/tv_try_new"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Don't know what to try?"
                android:textSize="27dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end|center_vertical"
                android:textColor="@android:color/white"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_new_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Randomly Picked"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:textSize="20dp"/>

        <LinearLayout
            android:id="@+id/ll_new_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="250dp"
                app:cardCornerRadius="20dp"
                android:background="@color/light_green"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/light_green"
                tools:layout_editor_absoluteX="30dp">

                <ImageView
                    android:id="@+id/iv_new_arrival"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img1"
                    android:contentDescription="@string/new_arrival"
                    android:scaleType="centerCrop"
                    android:background="@drawable/image_container"
                    android:outlineProvider="background"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_lorem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Lorem Ipsum Lorem Ipsum"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_lorem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/try_this_out"
                    android:textSize="14dp"
                    android:textColor="@color/dark_green"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

