<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.PostYourRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/iv_recipe_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="15dp"
                android:background="@color/light_green"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/light_green"
                tools:layout_editor_absoluteX="30dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Post Your Recipe"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/dark_green"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_check_light"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_check"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="450dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="35dp"
            android:background="@color/light_green"
            app:cardBackgroundColor="@color/light_green"
            tools:layout_editor_absoluteX="30dp">

            <ImageView
                android:id="@+id/iv_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_gallery"
                android:scaleType="centerInside"
                android:background="@drawable/image_container"
                android:outlineProvider="background"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_recipe_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="28dp"
                android:textStyle="bold"
                android:paddingVertical="7dp"
                android:textColor="@color/dark_green" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_edit"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_recipe_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/default_desc"
            android:textSize="16dp"
            android:textColor="@color/text_desc_color"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_ingredient"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="22dp"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                android:textColor="@color/dark_green" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_add"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_recipe"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Recipe"
                android:textSize="22dp"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                android:textColor="@color/dark_green" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp"
                android:src="@drawable/ic_edit"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>