<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.OptionsDrawerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/iv_recipe_back"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/light_green"
                app:cardBackgroundColor="@color/light_green"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                tools:layout_editor_absoluteX="30dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_drawer_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/lemon_squeeze"
                android:textSize="35dp"
                android:textStyle="bold"
                android:textColor="@color/dark_green"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                    android:id="@+id/iv_saved_recipe"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="25dp"
                    android:background="@color/light_green"
                    app:cardElevation="0dp"
                    android:layout_marginEnd="30dp"
                    app:cardBackgroundColor="@color/light_green"
                    tools:layout_editor_absoluteX="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_bookmark_filled" />

                        <TextView
                            android:id="@+id/tv_saved_recipe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saved"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:textColor="@color/dark_green"
                            android:textSize="16dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/iv_liked_recipe"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="25dp"
                android:background="@color/light_green"
                app:cardElevation="0dp"
                android:layout_marginStart="30dp"
                app:cardBackgroundColor="@color/light_green"
                tools:layout_editor_absoluteX="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_heart_filled" />

                    <TextView
                        android:id="@+id/tv_liked_recipe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/liked"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_green"
                        android:textSize="16dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="50dp"
            android:background="@color/light_green"
            app:cardBackgroundColor="@color/light_green"
            tools:layout_editor_absoluteX="30dp">

            <ImageView
                android:id="@+id/iv_try_and_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img4"
                android:contentDescription="@string/new_arrival"
                android:scaleType="centerCrop"
                android:background="@drawable/image_container"
                android:outlineProvider="background"/>

            <TextView
                android:id="@+id/tv_try_and_post"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Try something new and share!"
                android:textSize="27dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            app:cardBackgroundColor="@color/light_green"
            android:id="@+id/sign_in_with_google">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_google"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Sign in with Google"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/dark_green"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            app:cardBackgroundColor="@color/light_green"
            android:id="@+id/sign_out">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_sign_out"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/tv_sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Sign out"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/dark_green"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>